<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StatisticActivity"
    android:background="@drawable/background_menu" >

    <TextView
        android:id="@+id/text_view_1_stat_scr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/thong_ke"
        android:textColor="@color/text_view_guide_play_game"
        android:textSize="@dimen/size_text_view_big_stat_scr"/>
    
    <TextView
        android:id="@+id/text_view_2_stat_scr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so_tien_dang_co_la"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view_1_stat_scr"
        android:textColor="@color/text_view_guide_play_game"
        android:layout_marginTop="@dimen/size_text_view_small_stat_scr"
        android:textSize="@dimen/size_text_view_small_stat_scr"/>
    
    <TextView
        android:id="@+id/text_view_3_stat_scr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so_van_choi"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view_2_stat_scr"
        android:textColor="@color/text_view_guide_play_game"
        android:layout_marginTop="@dimen/size_text_view_small_stat_scr"
        android:textSize="@dimen/size_text_view_small_stat_scr"/>
    
    <TextView
        android:id="@+id/text_view_4_stat_scr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so_van_thang"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view_3_stat_scr"
        android:textColor="@color/text_view_guide_play_game"
        android:textSize="@dimen/size_text_view_small_stat_scr"/>
    
    <TextView
        android:id="@+id/text_view_5_stat_scr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so_van_thua"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view_4_stat_scr"
        android:textColor="@color/text_view_guide_play_game"
        android:textSize="@dimen/size_text_view_small_stat_scr"/>
</RelativeLayout>
