<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EndGameActivity" >
    
    <LinearLayout
        android:id="@+id/linear_layout_above_end_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_linear_layout_top_end_act"
        android:baselineAligned="false" >
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            
            <ImageView 
                android:id="@+id/image_avatar_you_end_activity"
                android:layout_width="@dimen/width_image_avatar_end_activity"
                android:layout_height="@dimen/height_image_avatar_end_activity"
                android:layout_centerHorizontal="true"
                android:src="@drawable/you"
                android:contentDescription="@string/img_content_discription" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_avatar_you_end_activity"
                android:layout_centerHorizontal="true"
                android:text="@string/you"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            
            <ImageView 
                android:id="@+id/image_avatar_1_end_activity"
                android:layout_width="@dimen/width_image_avatar_end_activity"
                android:layout_height="@dimen/height_image_avatar_end_activity"
                android:layout_centerHorizontal="true"
                android:src="@drawable/player1"
                android:contentDescription="@string/img_content_discription" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_avatar_1_end_activity"
                android:layout_centerHorizontal="true"
                android:text="@string/player1"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            
            <ImageView 
                android:id="@+id/image_avatar_2_end_activity"
                android:layout_width="@dimen/width_image_avatar_end_activity"
                android:layout_height="@dimen/height_image_avatar_end_activity"
                android:layout_centerHorizontal="true"
                android:src="@drawable/player2"
                android:contentDescription="@string/img_content_discription" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_avatar_2_end_activity"
                android:layout_centerHorizontal="true"
                android:text="@string/player2"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            
            <ImageView 
                android:id="@+id/image_avatar_3_end_activity"
                android:layout_width="@dimen/width_image_avatar_end_activity"
                android:layout_height="@dimen/height_image_avatar_end_activity"
                android:layout_centerHorizontal="true"
                android:src="@drawable/player3"
                android:contentDescription="@string/img_content_discription" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_avatar_3_end_activity"
                android:layout_centerHorizontal="true"
                android:text="@string/player3"/>
            
        </RelativeLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_layout_below_end_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_linear_layout_bottom_end_act"
        android:orientation="horizontal"
        android:baselineAligned="false" >
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/you"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/player1"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/player2"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/player3"/>
            
        </RelativeLayout>
        
    </LinearLayout>
    
    <ListView
        android:id="@+id/list_view_end_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear_layout_above_end_activity"
        android:layout_above="@id/linear_layout_below_end_activity"
        android:layout_marginTop="@dimen/margin_list_view_top_end_act"
        android:layout_marginBottom="@dimen/margin_list_view_bottom_end_act" />
    
</RelativeLayout>
